Bug 1110812 - Fix Pootle migration SNAFU.

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -104,8 +104,8 @@ badContentBlocked.blocked.message=O %S está bloqueando conteúdo nesta página.
 badContentBlocked.notblocked.message=O %S não está bloqueando nenhum conteúdo nesta página.
 
 crashedpluginsMessage.title=O plugin %S travou.
-crashedpluginsMessage.reloadButton.label=Reload page
-crashedpluginsMessage.reloadButton.accesskey=R
+crashedpluginsMessage.reloadButton.label=Recarregar página
+crashedpluginsMessage.reloadButton.accesskey=c
 crashedpluginsMessage.submitButton.label=Enviar um relatório de travamento
 crashedpluginsMessage.submitButton.accesskey=E
 crashedpluginsMessage.learnMore=Saiba mais…
@@ -155,13 +155,13 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
-pluginActivateNow.label=Allow Now
-pluginActivateNow.accesskey=N
+pluginActivateNow.label=Permitir agora
+pluginActivateNow.accesskey=P
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
-pluginActivateAlways.label=Allow and Remember
-pluginActivateAlways.accesskey=R
+pluginActivateAlways.label=Permitir e memorizar
+pluginActivateAlways.accesskey=m
 pluginBlockNow.label=Bloquear plugin
 pluginBlockNow.accesskey=B
 pluginContinue.label=Continuar permitindo
@@ -177,8 +177,8 @@ pluginContinueBlocking.label=Continuar bloqueando
 pluginContinueBlocking.accesskey=b
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
-pluginActivateTrigger.label=Allow…
-pluginActivateTrigger.accesskey=A
+pluginActivateTrigger.label=Permitir…
+pluginActivateTrigger.accesskey=P
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -202,8 +202,8 @@ sanitizeSelectedWarning=Todos os itens selecionados serão limpos.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
-update.downloadAndInstallButton.label=Update to %S
-update.downloadAndInstallButton.accesskey=U
+update.downloadAndInstallButton.label=Atualizar para a versão %S
+update.downloadAndInstallButton.accesskey=A
 
 # RSS Pretty Print
 feedShowFeedNew=Inscrever “%S”…
@@ -361,14 +361,14 @@ pointerLock.autoLock.title2=O %S ocultará o ponteiro.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key
-safebrowsing.getMeOutOfHereButton.label=Get me out of here!
-safebrowsing.getMeOutOfHereButton.accessKey=G
+safebrowsing.getMeOutOfHereButton.label=Me tire daqui!
+safebrowsing.getMeOutOfHereButton.accessKey=M
 safebrowsing.reportedWebForgery=Página avaliada como falsa!
-safebrowsing.notAForgeryButton.label=This isn't a web forgery…
-safebrowsing.notAForgeryButton.accessKey=F
+safebrowsing.notAForgeryButton.label=Esta não é uma página falsa…
+safebrowsing.notAForgeryButton.accessKey=s
 safebrowsing.reportedAttackSite=Página avaliada como foco de ataques!
-safebrowsing.notAnAttackButton.label=This isn't an attack site…
-safebrowsing.notAnAttackButton.accessKey=A
+safebrowsing.notAnAttackButton.label=Este não é um foco de ataques…
+safebrowsing.notAnAttackButton.accessKey=s
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
@@ -432,8 +432,8 @@ syncPromoNotification.addons-sync-disabled.description=Você pode usar sua conta
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = O %1$S automaticamente envia alguns dados para a %2$S de forma que possamos aprimorar sua experiência.
-dataReportingNotification.button.label  = Choose What I Share
-dataReportingNotification.button.accessKey  = C
+dataReportingNotification.button.label  = Selecionar o que compartilhar
+dataReportingNotification.button.accessKey  = S
 
 # Webapps notification popup
 webapps.install = Instalar
@@ -462,8 +462,8 @@ service.toolbarbutton.tooltiptext=Serviços
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Deseja ativar serviços do %1$S para exibição nas barras de ferramentas e painéis do %2$S?
-service.install.ok.label=Enable Services
-service.install.ok.accesskey=E
+service.install.ok.label=Ativar serviços
+service.install.ok.accesskey=t
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Salvar página no %S
@@ -474,8 +474,8 @@ social.marklinkMenu.label=Salvar link no %S
 social.error.message=O %1$S está impossibilitado de conectar-se com o %2$S neste momento.
 social.error.tryAgain.label=Tentar de novo
 social.error.tryAgain.accesskey=T
-social.error.closeSidebar.label=Close This Sidebar
-social.error.closeSidebar.accesskey=C
+social.error.closeSidebar.label=Fechar este painel
+social.error.closeSidebar.accesskey=F
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
@@ -486,8 +486,8 @@ identity.privacyPolicy = Política de privacidade
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = Identificar-se no %S
 identity.chooseIdentity.label = Usar um email existente
-identity.newIdentity.label = Use a different email
-identity.newIdentity.accessKey = e
+identity.newIdentity.label = Usar um email diferente
+identity.newIdentity.accessKey = U
 identity.newIdentity.email.placeholder = Email
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Forneça seu endereço de email para identificar-se em %S
@@ -496,8 +496,8 @@ identity.next.accessKey = A
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Identificado como: %S
-identity.loggedIn.signOut.label = Sign Out
-identity.loggedIn.signOut.accessKey = O
+identity.loggedIn.signOut.label = Sair
+identity.loggedIn.signOut.accessKey = S
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
@@ -508,11 +508,11 @@ getUserMedia.shareMicrophone.message = Deseja compartilhar seu microfone com %S?
 getUserMedia.shareScreen.message = Deseja compartilhar sua tela com %S?
 getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e seu microfone com %S?
 getUserMedia.shareScreenAndMicrophone.message = Deseja compartilhar seu microfone e sua tela com %S?
-getUserMedia.selectWindow.label=Window to share:
-getUserMedia.selectWindow.accesskey=W
-getUserMedia.selectScreen.label=Screen to share:
-getUserMedia.selectScreen.accesskey=S
-getUserMedia.selectApplication.label=Application to share:
+getUserMedia.selectWindow.label=Janela a compartilhar:
+getUserMedia.selectWindow.accesskey=J
+getUserMedia.selectScreen.label=Tela a compartilhar:
+getUserMedia.selectScreen.accesskey=T
+getUserMedia.selectApplication.label=Aplicativo a compartilhar:
 getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sem vídeo
 getUserMedia.noApplication.label = Nenhum aplicativo
@@ -530,17 +530,17 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 janela);#1 (#2 janelas)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Share Selected Device;Share Selected Devices
-getUserMedia.shareSelectedDevices.accesskey = S
+getUserMedia.shareSelectedDevices.label = Compartilhar dispositivo selecionado;Compartilhar dispositivos selecionados
+getUserMedia.shareSelectedDevices.accesskey = o
 getUserMedia.shareScreen.label = Compartilhar tela
 getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
 getUserMedia.shareSelectedItems.label = Compartilhar itens selecionados
-getUserMedia.always.label = Always Share
-getUserMedia.always.accesskey = A
-getUserMedia.denyRequest.label = Don't Share
-getUserMedia.denyRequest.accesskey = D
-getUserMedia.never.label = Never Share
+getUserMedia.always.label = Sempre compartilhar
+getUserMedia.always.accesskey = S
+getUserMedia.denyRequest.label = Não compartilhar
+getUserMedia.denyRequest.accesskey = m
+getUserMedia.never.label = Nunca compartilhar
 getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Você está compartilhando sua câmera com esta página.
 getUserMedia.sharingMicrophone.message2 = Você está compartilhando seu microfone com esta página.
@@ -548,13 +548,13 @@ getUserMedia.sharingCameraAndMicrophone.message2 = Você está compartilhando su
 getUserMedia.sharingApplication.message = Você está compartilhando um aplicativo com esta página.
 getUserMedia.sharingScreen.message = Você está compartilhando sua tela com esta página.
 getUserMedia.sharingWindow.message = Você está compartilhando uma janela com esta página.
-getUserMedia.continueSharing.label = Continue Sharing
+getUserMedia.continueSharing.label = Continuar compartilhando
 getUserMedia.continueSharing.accesskey = C
-getUserMedia.stopSharing.label = Stop Sharing
-getUserMedia.stopSharing.accesskey = S
+getUserMedia.stopSharing.label = Parar de compartilhar
+getUserMedia.stopSharing.accesskey = P
 
-getUserMedia.sharingMenu.label = Tabs sharing devices
-getUserMedia.sharingMenu.accesskey = d
+getUserMedia.sharingMenu.label = Abas compartilhando dispositivos
+getUserMedia.sharingMenu.accesskey = A
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -592,10 +592,10 @@ getUserMedia.sharingMenuUnknownHost = Origem desconhecida
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = O %S aparenta iniciar… muito… lentamente.
-slowStartup.helpButton.label = Learn How to Speed It Up
+slowStartup.helpButton.label = Saiba como acelerá-lo
 slowStartup.helpButton.accesskey = L
-slowStartup.disableNotificationButton.label = Don't Tell Me Again
-slowStartup.disableNotificationButton.accesskey = A
+slowStartup.disableNotificationButton.label = Não me avise de novo
+slowStartup.disableNotificationButton.accesskey = N
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
