--- a/pt-BR/browser/chrome/browser/devtools/inspector.properties
+++ b/pt-BR/browser/chrome/browser/devtools/inspector.properties
@@ -33,7 +33,7 @@ nodeMenu.tooltiptext=Ações para o nó
 
 # LOCALIZATION NOTE (inspector.*)
 # Used for the menuitem in the tool menu
-inspector.label=Inspector
+inspector.label=Inspecionar
 inspector.commandkey=i
 inspector.accesskey=I
 
