--- a/pt-BR/browser/chrome/browser/places/places.properties
+++ b/pt-BR/browser/chrome/browser/places/places.properties
@@ -28,23 +28,23 @@ sortByNameGeneric=Ordenar pelo nome
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
-view.sortBy.1.name.label=Sort by Name
+view.sortBy.1.name.label=Nome
 view.sortBy.1.name.accesskey=N
-view.sortBy.1.url.label=Sort by Location
-view.sortBy.1.url.accesskey=L
-view.sortBy.1.date.label=Sort by Most Recent Visit
-view.sortBy.1.date.accesskey=V
-view.sortBy.1.visitCount.label=Sort by Visit Count
-view.sortBy.1.visitCount.accesskey=C
-view.sortBy.1.keyword.label=Sort by Keyword
-view.sortBy.1.keyword.accesskey=K
-view.sortBy.1.description.label=Sort by Description
-view.sortBy.1.description.accesskey=D
-view.sortBy.1.dateAdded.label=Sort by Added
-view.sortBy.1.dateAdded.accesskey=e
-view.sortBy.1.lastModified.label=Sort by Last Modified
+view.sortBy.1.url.label=Endereço
+view.sortBy.1.url.accesskey=E
+view.sortBy.1.date.label=Recentemente visitado
+view.sortBy.1.date.accesskey=c
+view.sortBy.1.visitCount.label=Número de visitas
+view.sortBy.1.visitCount.accesskey=v
+view.sortBy.1.keyword.label=Palavra-chave
+view.sortBy.1.keyword.accesskey=P
+view.sortBy.1.description.label=Descrição
+view.sortBy.1.description.accesskey=s
+view.sortBy.1.dateAdded.label=Adicionado
+view.sortBy.1.dateAdded.accesskey=A
+view.sortBy.1.lastModified.label=Modificado
 view.sortBy.1.lastModified.accesskey=M
-view.sortBy.1.tags.label=Sort by Tags
+view.sortBy.1.tags.label=Tags
 view.sortBy.1.tags.accesskey=T
 
 searchBookmarks=Localizar nos favoritos
@@ -91,5 +91,5 @@ searchengineResultLabel=Search
 # %S will be replaced with the application name.
 lockPrompt.title=Erro de inicialização do navegador
 lockPrompt.text=Histórico e favoritos não serão funcionais porque um dos arquivos do %S está sendo usado por outro aplicativo, talvez um programa de segurança.
-lockPromptInfoButton.label=Learn More
-lockPromptInfoButton.accessKey=L
+lockPromptInfoButton.label=Saiba mais
+lockPromptInfoButton.accessKey=S
