--- a/pt-BR/browser/chrome/browser/preferences/preferences.properties
+++ b/pt-BR/browser/chrome/browser/preferences/preferences.properties
@@ -126,8 +126,8 @@ actualAppCacheSize=Seu cache de aplicativos está usando %1$S %2$S de espaço 
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
-updateAutoDesktop.label=Automatically install updates from desktop %S
-updateAutoDesktop.accessKey=A
+updateAutoDesktop.label=Instalar atualizações automaticamente do %S desktop
+updateAutoDesktop.accessKey=I
 
 syncUnlink.title=Deseja desconectar seu dispositivo?
 syncUnlink.label=Este dispositivo não estará mais associado à sua conta do Sync. Os seus dados, neste dispositivo e na conta do Sync, permanecerão intactos.
