--- a/pt-BR/services/sync/sync.properties
+++ b/pt-BR/services/sync/sync.properties
@@ -17,7 +17,7 @@ remote.notification.label = As abas recentes do desktop estarão disponíveis as
 
 error.login.title = Erro ao conectar
 error.login.description = O Sync encontrou um erro ao conectar: %1$S. Por favor, tente de novo.
-error.login.prefs.label = Preferences…
+error.login.prefs.label = Preferências…
 error.login.prefs.accesskey = P
 # should decide if we're going to show this
 error.logout.title = Erro ao desconectar
@@ -25,24 +25,24 @@ error.logout.description = O Sync encontrou um erro ao conectar. Provavelmente e
 error.sync.title = Erro ao sincronizar
 error.sync.description = Houve um problema ao sincronizar: %1$S. O Sync irá tentar de novo automaticamente.
 error.sync.prolonged_failure = A sincronização não pôde ser efetuada nos últimos %1$S dias. Verifique suas configurações de rede.
-error.sync.serverStatusButton.label = Server Status
-error.sync.serverStatusButton.accesskey = V
+error.sync.serverStatusButton.label = Status do servidor
+error.sync.serverStatusButton.accesskey = S
 error.sync.needUpdate.description = Você precisa atualizar o Firefox Sync para continuar sincronizando seus dados.
-error.sync.needUpdate.label = Update Firefox Sync
-error.sync.needUpdate.accesskey = U
+error.sync.needUpdate.label = Atualizar o Firefox Sync
+error.sync.needUpdate.accesskey = o
 error.sync.tryAgainButton.label = Sincronizar agora
-error.sync.tryAgainButton.accesskey = n
+error.sync.tryAgainButton.accesskey = S
 warning.sync.quota.label = Aproximando-se da cota no servidor
 warning.sync.quota.description = Você está se aproximando da cota no servidor. Por favor, reveja quais dados sincronizar.
 error.sync.quota.label = Cota no servidor excedida
 error.sync.quota.description = O Sync falhou porque a cota no servidor foi excedida. Por favor, reveja quais dados sincronizar.
-error.sync.viewQuotaButton.label = View Quota
-error.sync.viewQuotaButton.accesskey = V
+error.sync.viewQuotaButton.label = Exibir cota
+error.sync.viewQuotaButton.accesskey = x
 warning.sync.eol.label = Serviço sendo desativado
 # %1: the app name (Firefox)
 warning.sync.eol.description = O seu serviço Firefox Sync será desativado em breve. Atualize o %1$S para permanecer sincronizado.
 error.sync.eol.label = Serviço indisponível
 # %1: the app name (Firefox)
 error.sync.eol.description = O seu serviço Firefox Sync não está mais disponível. Você precisa atualizar o %1$S para permanecer sincronizado.
-sync.eol.learnMore.label = Learn more
-sync.eol.learnMore.accesskey = L
+sync.eol.learnMore.label = Saiba mais
+sync.eol.learnMore.accesskey = S
