--- a/pt-BR/toolkit/chrome/global/resetProfile.properties
+++ b/pt-BR/toolkit/chrome/global/resetProfile.properties
@@ -8,5 +8,5 @@
 resetUnusedProfile.message=Parece que você não usou o %S durante um bom tempo. Deseja fazer uma limpeza para deixá-lo como se fosse recém-instalado? A propósito, bem-vindo de volta!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
-refreshProfile.resetButton.label=Refresh %S…
-refreshProfile.resetButton.accesskey=e
+refreshProfile.resetButton.label=Restaurar o %S…
+refreshProfile.resetButton.accesskey=R
