--- a/pt-BR/toolkit/chrome/mozapps/handling/handling.properties
+++ b/pt-BR/toolkit/chrome/mozapps/handling/handling.properties
@@ -5,8 +5,8 @@
 protocol.title=Executar aplicativo
 protocol.description=Este endereço precisa de um aplicativo para ser aberto.
 protocol.choices.label=Enviar para:
-protocol.checkbox.label=Remember my choice for %S links.
-protocol.checkbox.accesskey=R
+protocol.checkbox.label=Memorizar a decisão para endereços “%S”.
+protocol.checkbox.accesskey=M
 protocol.checkbox.extra=Esta opção pode ser alterada nas preferências do %S.
 
 choose.application.title=Outro aplicativo
