[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/contentAreaCommands.properties
+++ b/pt-BR/suite/chrome/common/contentAreaCommands.properties
@@ -6,6 +6,7 @@
 
 # LOCALIZATION NOTE (searchSelected): %1$S is the search engine,
 # %2$S is the selection string.
+searchSelected.accesskey=e
 
 blockImage=Bloquear imagens de %S
 blockImage.accesskey=B
