--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -11,10 +11,15 @@ outdatedpluginsMessage.button.accesskey=u
 # later thought that this word felt too aggressive and we now use "requests".
 # Localizers can use use a word corresponding to "requests" or "requires"
 # or both, depending on what matches the language best.
+carbonfailurepluginsMessage.title=Esta página requer um plugin que só pode rodar em modo de 32 bits.
+carbonfailurepluginsMessage.button.label=Reiniciar em modo de 32 bits
+carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Plugins adicionais são requeridos para exibir todo conteúdo de mídia desta página.
 
 blockedpluginsMessage.title=Alguns plugins requeridos por esta página foram bloqueados para sua proteção.
+blockedpluginsMessage.infoButton.label=Detalhes…
+blockedpluginsMessage.infoButton.accesskey=D
 
 crashedpluginsMessage.title=O plugin %S travou.
 crashedpluginsMessage.reloadButton.label=Recarregar página
@@ -28,6 +33,9 @@ activatepluginsMessage.activate.label=Ativar plugins
 activatepluginsMessage.activate.accesskey=A
 activatepluginsMessage.dismiss.label=Não ativar
 activatepluginsMessage.dismiss.accesskey=N
+activatepluginsMessage.remember=Lembrar para este site
+activatepluginsMessage.always.label=Sempre ativar plugins para este site
+activatepluginsMessage.always.accesskey=t
 activatepluginsMessage.never.label=Nunca ativar plugins para este site
 activatepluginsMessage.never.accesskey=N
 activateSinglePlugin=Ativar
@@ -90,27 +98,55 @@ lwthemeInstallNotification.manageButton=Gerenciar temas…
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
+lwthemeNeedsRestart.message=O %S será instalado após você reiniciar.
 lwthemeNeedsRestart.restartButton=Reiniciar agora
+lwthemeNeedsRestart.restartButton.accesskey=R
 
 # Geolocation UI
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
 #shareLocation is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Share or Allow/Block.
 geolocation.shareLocation=Compartilhar localização
+geolocation.shareLocation.accesskey=a
+geolocation.alwaysShareForSite=Sempre para este site
+geolocation.alwaysShareForSite.accesskey=A
+geolocation.neverShareForSite=Nunca para este site
+geolocation.neverShareForSite.accesskey=N
+geolocation.siteWantsToKnow=Este site (%S) quer saber sua localização.
+geolocation.fileWantsToKnow=O arquivo %S quer saber sua localização.
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." unless \u2026 doesn't suit traditions in your locale.
 geolocation.learnMore=Saiba mais…
+geolocation.remember=Lembrar para este site
 
 # Desktop Notifications
 # LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
 #showForSession is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Show or Allow/Block.
 webNotifications.showForSession=Mostrar notificações
+webNotifications.showForSession.accesskey=w
+webNotifications.dontShowThisSession=Não para esta sessão
+webNotifications.dontShowThisSession.accesskey=o
+webNotifications.alwaysShowForSite=Sempre para este site
+webNotifications.alwaysShowForSite.accesskey=A
+webNotifications.neverShowForSite=Nunca para este site
+webNotifications.neverShowForSite.accesskey=N
+webNotifications.showFromSite=Você quer mostrar notificações para %S?
+webNotifications.remember=Lembrar para este site
 
 # IndexedDB
+offlineApps.permissions=Este site (%S) está solicitando o armazenamento de dados no seu computador para uso offline.
+offlineApps.private=Você está em uma janela privativa. Este site (%S) não tem permissão de armazenar dados em seu computador para uso offline.
+offlineApps.quota=Este site (%1$S) está tentando armazenar mais que %2$SMB de dados em seu computador para uso offline.
+offlineApps.always=Sempre permitir
+offlineApps.always.accesskey=A
+offlineApps.later=Agora não
+offlineApps.later.accesskey=N
 offlineApps.never=Nunca para este site
+offlineApps.never.accesskey=e
 
 # Block autorefresh
+refreshBlocked.goButton.accesskey=A
 refreshBlocked.refreshLabel=O %S impediu esta página de recarregar automaticamente.
 refreshBlocked.redirectLabel=O %S impediu esta página de redirecionar automaticamente para outra página.
 
@@ -125,6 +161,7 @@ lockPromptInfoButton.accesskey=S
 updatePromptCheckButton.label=Verificar atualizações
 updatePromptCheckButton.accesskey=V
 
+SecurityTitle=Alerta de segurança
 SecurityPreferences.label=Preferências
 SecurityPreferences.accesskey=P
 PostToInsecureContinue=Continuar
@@ -133,3 +170,4 @@ PostToInsecureContinue=Continuar
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key.
+safebrowsing.reportedWebForgery=Página avaliada como falsa!
