--- a/pt-BR/suite/chrome/common/quitDialog.properties
+++ b/pt-BR/suite/chrome/common/quitDialog.properties
@@ -9,8 +9,21 @@
 # %S (also in the messages further down)
 # is the application's short name (e.g. SeaMonkey)
 # from the brand.properties file
+quitDialogTitle=Sair do %S
+lastwindowDialogTitle=Fechar navegador %S
+restartDialogTitle=Reiniciar o %S
 
+restartNowTitle=&Reiniciar agora
+restartLaterTitle=Reiniciar mais &tarde
 quitTitle=&Sair
+lastwindowTitle=Fechar navega&dor
+cancelTitle=&Cancelar
 # LOCALIZATION NOTE:
 # The following two strings are labels for the same button, depending on
 # whether we are quitting the whole Suite, or only the Browser
+saveTitle=&Salvar e sair
+savelastwindowTitle=&Salvar e fechar
+neverAsk=Não per&guntar na próxima vez
+message=Deseja que o %S abra estas mesmas abas e janelas ao reiniciar?
+messageNoWindows=Você deseja que o %S salve suas abas ao reiniciar?
+messageRestart=O %S vai tentar restaurar suas abas e janelas ao reiniciar.
