--- a/pt-BR/suite/chrome/common/viewZoomOverlay.properties
+++ b/pt-BR/suite/chrome/common/viewZoomOverlay.properties
@@ -10,8 +10,14 @@
 # LOCALIZATION NOTE (fullZoom,textZoom): are never available at the same time
 fullZoom.label=Zoom (%zoom% %)
 fullZoom.accesskey=Z
+textZoom.label=Ampliar texto (%zoom% %)
+textZoom.accesskey=x
 
 # labels and accesskeys to emphasize the 100 % and 200 % entries
+zoom.100.label=100 % (Tamanho original)
+zoom.100.accesskey=n
+zoom.200.label=200 % (Dobro do tamanho)
+zoom.200.accesskey=D
 
 # label pattern for remaining values, accesskeys are assigned dynamically
 zoom.value.label=%zoom% %
