--- a/pt-BR/suite/chrome/mailnews/pref/prefs.properties
+++ b/pt-BR/suite/chrome/mailnews/pref/prefs.properties
@@ -6,14 +6,21 @@
 # The following are used by the Account Wizard
 #
 enterValidEmail=Por favor forneça um endereço de email válido.
+accountNameExists=Uma conta com esse nome já existe. Por favor forneça um nome diferente.
+accountNameEmpty=O nome da conta não pode ficar em branco.
 modifiedAccountExists=Uma conta com este nome e servidor já existe. Por favor forneça um nome de usuário e/ou nome do servidor diferentes.
 userNameChanged=Seu nome de usuário foi atualizado. Você pode precisar atualizar seu endereço de email e/ou nome de usuário associado a esta conta.
 serverNameChanged=O nome do servidor foi alterado. Por favor verifique se as pastas usadas por filtros existem no novo servidor.
 # LOCALIZATION NOTE (junkSettingsBroken): %1$S is the account name
+junkSettingsBroken=As configurações de spam na conta "%1$S" possivelmente contém um problema. Gostaria de revisá-las antes de salvar as configurações de conta?
 # LOCALIZATION NOTE (localDirectoryChanged): %1$S is program name (&brandShortName;)
+localDirectoryChanged=%1$S precisa reiniciar agora para aplicar as mudanças nas configurações de diretório local.
 localDirectoryRestart=Reiniciar
+userNameEmpty=O nome de usuário não pode ser vazio
 # LOCALIZATION NOTE (localDirectoryInvalid): %1$S is path to folder
+localDirectoryInvalid=O caminho do diretório local "%1$S" é inválido. Por favor, escolha um diretório diferente.
 # LOCALIZATION NOTE (localDirectoryNotAllowed): %1$S is path to folder
+localDirectoryNotAllowed=O caminho do diretório local "%1$S" não serve para armazenamento de mensagens. Por favor, escolha outro diretório.
 # if the user chooses to cancel the wizard when no accounts are there throw a message
 # LOCALIZATION NOTE (cancelWizard)
 # do not localize "\n\n"
@@ -22,6 +29,7 @@ accountWizard=Assistente de Contas
 WizardExit=Sair
 WizardContinue=Cancelar
 # when the wizard already has a domain (Should we say something different?)
+enterValidServerName=Por favor, forneça um nome de servidor válido.
 failedRemoveAccount=Falha em excluir esta conta.
 #LOCALIZATION NOTE: confirmRemoveAccount: %S is the account pretty name
 confirmRemoveAccount=Tem certeza de que deseja excluir a conta "%S"?
@@ -30,8 +38,12 @@ confirmRemoveAccountTitle=Excluir conta
 accountName=%1$S - %2$S
 
 # LOCALIZATION NOTE: confirmDeferAccountWarning: do not localize "\n\n", it means a new empty line in the string.
+confirmDeferAccountWarning=Se você armazenar os novos e-mails dessa conta numa caixa de entrada de outra conta, você não conseguirá acessar os e-mails já baixados para essa conta. Se você tiver e-mail nessa conta, por favor copie-os para outra conta primeiro.\n\nSe você tiver filtros que redirecionem e-mails para esta conta, você deve desativá-los primeiro ou mudar a pasta de destino. Se qualquer conta tem pastas especiais nessa conta (Enviados, Rascunhos, Modelos, Arquivos, Spam), você deve trocá-los para outra conta.\n\nVocê ainda deseja armazenar os e-mails desta conta numa conta diferente?
 confirmDeferAccountTitle=Mover conta?
 
+directoryAlreadyUsedByOtherAccount=O diretório especificado na configuração de diretório local já está em uso pela conta "%S". Por favor, escolha um diretório diferente.
+directoryParentUsedByOtherAccount=Um diretório pai do diretório especificado na configuração de diretório local já está em uso pela conta "%S". Por favor, escolha um diretório diferente.
+directoryChildUsedByOtherAccount=Um sub-diretório do diretório especificado na configuração de diretório local já está em uso pela conta "%S". Por favor, escolha um diretório diferente.
 #Provide default example values for sample email address
 exampleEmailUserName=msilva
 exampleEmailDomain=exemplo.com.br
@@ -44,6 +56,7 @@ customizedEmailText=Forneça sua %1$S %2$S (por exemplo, se seu %1$S endereço d
 # account manager stuff
 prefPanel-server=Configurações do servidor
 prefPanel-copies=Cópias e pastas
+prefPanel-synchronization=Sincronização & armazenamento
 prefPanel-diskspace=Espaço em disco
 prefPanel-addressing=Editar e endereçar
 prefPanel-junk=Spam
@@ -59,7 +72,11 @@ identity-edit-req-title=Erro na criação da identidade
 
 ## LOCALIZATION NOTE (identity-delete-confirm): %S is the identity name
 # and should be put on a new line. The new line is produced with the "\n" string.
+identity-delete-confirm=Tem certeza de que deseja excluir a identidade: \n %S?
 ## LOCALIZATION NOTE (identity-delete-confirm-title): %S is the account name
+identity-delete-confirm-title=Excluir identidade para %S
+identity-delete-confirm-button=Excluir
 
 choosefile=Selecionar um arquivo
 
+forAccount=Para a conta "%S"
