update DOM L10n for changes in Firefox 36 cycle

--- a/de/dom/chrome/layout/css.properties
+++ b/de/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=Sättigung
 PEColorLightnessEOF=Helligkeit
 PEColorOpacityEOF=Deckkraft in Farbwert
 PEExpectedNumber=Nummer erwartet, aber '%1$S' gefunden.
+PEPositionEOF=<position>
+PEExpectedPosition=<position> erwartet, aber '%1$S' gefunden.
+PEExpectedRadius=Radius erwartet, aber '%1$S' gefunden.
 PEExpectedCloseParen=')' erwartet, aber '%1$S' gefunden.
 PEDeclEndEOF=';' oder '}' zum Beenden der Deklaration
 PEParseDeclarationNoColon=':' erwartet, aber '%1$S' gefunden.
