update security L10n for changes in Firefox 36 cycle

--- a/de/security/manager/chrome/pippki/pippki.properties
+++ b/de/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,14 @@ pageInfo_NoEncryption=Verbindung nicht verschlüsselt
 pageInfo_Privacy_None1=Die Website %S unterstützt keine Verschlüsselung für die Seite, die Sie ansehen.
 pageInfo_Privacy_None2=Informationen, die ohne Verschlüsselung über das Internet gesendet werden, können während der Übertragung von anderen Personen angesehen werden.
 pageInfo_Privacy_None3=Die Seite, die Sie ansehen, ist nicht verschlüsselt.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Verbindung verschlüsselt: Hochgradige Verschlüsselung (%S, %S-bit-Schlüssel)
-pageInfo_Privacy_Strong1=Die Seite, die Sie ansehen, wurde verschlüsselt, bevor sie über das Internet übermittelt wurde.
-pageInfo_Privacy_Strong2=Verschlüsselung macht es für unberechtigte Personen sehr schwierig, zwischen Computern übertragene Informationen anzusehen. Daher ist es sehr unwahrscheinlich, dass jemand diese Seite gelesen hat, als sie über das Netzwerk gesendet wurde.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Verbindung verschlüsselt: Schwache Verschlüsselung (%S, %S-bit-Schlüssel)
-pageInfo_Privacy_Weak1=Die Website %S verwendet nur eine schwache Verschlüsselung für die Seite, die Sie ansehen.
-pageInfo_Privacy_Weak2=Eine schwache Verschlüsselung kann unberechtigten Personen die Möglichkeit bieten, diese Informationen anzusehen.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Verbindung verschlüsselt (%1$S, %2$S-Bit-Schlüssel, %3$S)
+pageInfo_Privacy_Encrypted1=Die Seite, die Sie ansehen, wurde verschlüsselt, bevor sie über das Internet übermittelt wurde.
+pageInfo_Privacy_Encrypted2=Verschlüsselung macht es für unberechtigte Personen schwierig, zwischen Computern übertragene Informationen anzusehen. Daher ist es unwahrscheinlich, dass jemand diese Seite gelesen hat, als sie über das Internet übertragen wurde.
 pageInfo_MixedContent=Verbindung teilweise verschlüsselt
-pageInfo_Privacy_Mixed1=Teile der Seite, die Sie ansehen, wurden nicht verschlüsselt, bevor sie über das Internet übertragen wurden.
+pageInfo_Privacy_Broken1=Teile der Seite, die Sie ansehen, wurden nicht verschlüsselt oder die Verschlüsselung ist nicht stark genug, bevor sie über das Internet übertragen wurden.
 
 #Cert Viewer
 certDetails=Zertifikat-Ansicht:
@@ -151,17 +147,17 @@ writeFileUnknownError=Unbekannter Fehler
 addExceptionBrandedWarning2=Hiermit übergehen Sie die Identifikation dieser Website durch %S.
 addExceptionInvalidHeader=Diese Website versucht sich mit ungültigen Informationen zu identifizieren.
 addExceptionDomainMismatchShort=Falsche Website
-addExceptionDomainMismatchLong=Das Zertifikat gehört einer anderen Website, was auf einen Identitätsdiebstahl hinweisen könnte.
+addExceptionDomainMismatchLong2=Das Zertifikat gehört zu einer anderen Website, was heißen könnte, dass jemand versucht, sich als diese Website auszugeben.
 addExceptionExpiredShort=Veraltete Informationen
-addExceptionExpiredLong=Das Zertifikat ist derzeit nicht gültig. Es kann nicht verifiziert werden, ob diese Identität als gestohlen oder verloren gemeldet wurde.
+addExceptionExpiredLong2=Das Zertifikat ist derzeit nicht gültig. Es könnte gestohlen oder verloren worden sein, und könnte von jemand verwendet werden, um sich als diese Website auszugeben.
 addExceptionUnverifiedOrBadSignatureShort=Unbekannte Identität
-addExceptionUnverifiedOrBadSignatureLong=Dem Zertifikat wird nicht vertraut, weil es nicht von einer bekannten Autorität unter Verwendung einer sicheren Signatur verifiziert wurde.
+addExceptionUnverifiedOrBadSignatureLong2=Dem Zertifikat wird nicht vertraut, weil nicht verifiziert wurde, dass es von einer vertrauenswürdigen Autorität unter Verwendung einer sicheren Signatur herausgegeben wurde.
 addExceptionValidShort=Gültiges Zertifikat
 addExceptionValidLong=Diese Website gibt gültige, überprüfte Informationen an.  Es gibt keinen Grund, eine Ausnahmeregel hinzuzufügen.
 addExceptionCheckingShort=Überprüfe Informationen
-addExceptionCheckingLong=Es wird versucht, die Website zu identifizieren…
+addExceptionCheckingLong2=Identifikation der Website wird versucht…
 addExceptionNoCertShort=Keine Informationen verfügbar
-addExceptionNoCertLong=Der Identifikations-Status der angegebenen Website konnte nicht bezogen werden.
+addExceptionNoCertLong2=Der Identifikationsstatus für diese Website konnte nicht bezogen werden.
 addExceptionConnectionFailed=Verbindung fehlgeschlagen
 
 #Certificate Exists in database
