update suite L10n for changes in SeaMonkey 2.33 cycle

--- a/de/suite/chrome/common/dataman/dataman.properties
+++ b/de/suite/chrome/common/dataman/dataman.properties
@@ -32,6 +32,7 @@ perm.script.label=Skripte ausführen
 perm.stylesheet.label=Stylesheets laden
 perm.sts/use.label="Strict Transport Security" verwenden
 perm.sts/subd.label="Strict Transport Security" auf Sub-Domains anwenden
+perm.trackingprotection.label=Aktivitätsverfolgung (Tracking)
 
 perm.type.default=Wählen Sie einen Typ
 
