--- a/de/suite/chrome/common/notification.properties
+++ b/de/suite/chrome/common/notification.properties
@@ -16,14 +16,10 @@ carbonfailurepluginsMessage.button.label=Im 32-Bit-Modus neu starten
 carbonfailurepluginsMessage.button.accesskey=B
 
 missingpluginsMessage.title=Um alle Medieninhalte auf dieser Seite darzustellen, werden zusätzliche Plugins benötigt.
-missingpluginsMessage.button.label=Fehlende Plugins installieren…
-missingpluginsMessage.button.accesskey=F
 
 blockedpluginsMessage.title=Manche von dieser Seite benötigten Plugins wurden zu Ihrer Sicherheit blockiert.
 blockedpluginsMessage.infoButton.label=Details…
 blockedpluginsMessage.infoButton.accesskey=D
-blockedpluginsMessage.searchButton.label=Plugins aktualisieren…
-blockedpluginsMessage.searchButton.accesskey=u
 
 crashedpluginsMessage.title=Das %S-Plugin ist abgestürzt.
 crashedpluginsMessage.reloadButton.label=Seite neu laden
@@ -184,8 +180,10 @@ updatePromptCheckButton.accesskey=N
 SecurityTitle=Sicherheitswarnung
 MixedContentMessage=Sie haben eine verschlüsselte Seite aufgerufen, die einige unverschlüsselte Informationen enthält. Informationen, die Sie auf dieser Seite sehen oder eingeben, können leicht von Dritten gelesen werden.
 MixedActiveContentMessage=Sie haben eine verschlüsselte Seite aufgerufen, die unsichere Informationen enthält. Informationen, die Sie auf dieser Seite sehen oder eingeben, könnten leicht von Dritten gelesen werden.
+TrackingContentMessage=Teile dieser Seite könnten Ihre Online-Aktivitäten verfolgen.
 MixedDisplayContentMessage=Sie haben eine verschlüsselte Seite aufgerufen, die nur teilweise verschlüsselt ist und ein Abhören nicht verhindert.
 BlockedActiveContentMessage=Unsichere Informationen auf dieser Seite wurden blockiert.
+BlockedTrackingContentMessage=Teile der Seite, die Ihre Online-Aktivitäten verfolgen, wurden blockiert.
 BlockedDisplayContentMessage=Nicht verschlüsselte Informationen auf dieser Seite wurden blockiert.
 EnterInsecureMessage=Sie haben eine verschlüsselte Seite verlassen. Informationen, die Sie von jetzt an senden oder erhalten, können leicht von Dritten gelesen werden.
 EnterSecureMessage=Sie haben eine verschlüsselte Seite aufgerufen. Die Website hat sich korrekt identifiziert, und Informationen, die Sie auf dieser Seite sehen oder eingeben, können nicht leicht von Dritten gelesen werden.
