update DOM L10n to trunk state

--- a/de/dom/chrome/dom/dom.properties
+++ b/de/dom/chrome/dom/dom.properties
@@ -157,57 +157,9 @@ DataContainerEventWarning=DataContainerEvent sollte nicht mehr verwendet werden.
 SendAsBinaryWarning=Die nicht standardgemäße Methode sendAsBinary sollte nicht mehr verwendet werden und wird bald entfernt. Verwenden Sie die standardgemäße Methode send(Blob data) stattdessen.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=window.controllers sollte nicht mehr verwendet werden. Verwenden Sie es nicht für die Browser-Erkennung.
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=KeyboardEvent.key-Wert "Down" sollte nicht mehr verwendet werden und wird auf "ArrowDown" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=KeyboardEvent.key-Wert "Left" sollte nicht mehr verwendet werden und wird auf "ArrowLeft" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=KeyboardEvent.key-Wert "Right" sollte nicht mehr verwendet werden und wird auf "ArrowRight" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=KeyboardEvent.key-Wert "Up" sollte nicht mehr verwendet werden und wird auf "ArrowUp" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=KeyboardEvent.key-Wert "Crsel" sollte nicht mehr verwendet werden und wird auf "CrSel" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=KeyboardEvent.key-Wert "Del" sollte nicht mehr verwendet werden und wird auf "Delete" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=KeyboardEvent.key-Wert "Exsel" sollte nicht mehr verwendet werden und wird auf "ExSel" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=KeyboardEvent.key-Wert "Menu" sollte nicht mehr verwendet werden und wird auf "ContextMenu" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=KeyboardEvent.key-Wert "Esc" sollte nicht mehr verwendet werden und wird auf "Escape" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=KeyboardEvent.key-Wert "Nonconvert" sollte nicht mehr verwendet werden und wird auf "NonConvert" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=KeyboardEvent.key-Wert "HalfWidth" sollte nicht mehr verwendet werden und wird auf "Hankaku" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=KeyboardEvent.key-Wert "RomanCharacters" sollte nicht mehr verwendet werden und wird auf "Romaji" unbenannt oder auf "Eisu" umgeleitet. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=KeyboardEvent.key-Wert "FullWidth" sollte nicht mehr verwendet werden und wird auf "Zenkaku" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=KeyboardEvent.key-Wert "SelectMedia" sollte nicht mehr verwendet werden und wird auf "MediaSelect" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=KeyboardEvent.key-Wert "MediaNextTrack" sollte nicht mehr verwendet werden und wird auf "MediaTrackNext" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=KeyboardEvent.key-Wert "MediaPreviousTrack" sollte nicht mehr verwendet werden und wird auf "MediaTrackPrevious" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=KeyboardEvent.key-Wert "Red" sollte nicht mehr verwendet werden und wird auf "ColorF0Red" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=KeyboardEvent.key-Wert "Green" sollte nicht mehr verwendet werden und wird auf "ColorF1Green" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=KeyboardEvent.key-Wert "Yellow" sollte nicht mehr verwendet werden und wird auf "ColorF2Yellow" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=KeyboardEvent.key-Wert "Blue" sollte nicht mehr verwendet werden und wird auf "ColorF3Blue" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=KeyboardEvent.key-Wert "Live" sollte nicht mehr verwendet werden und wird entfernt. Für weitere Hilfe siehe  https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=KeyboardEvent.key-Wert "Apps" sollte nicht mehr verwendet werden und wird entfernt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=KeyboardEvent.key-Wert "FastFwd" sollte nicht mehr verwendet werden und wird auf "MediaFastForward" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=KeyboardEvent.key-Wert "Zoom" sollte nicht mehr verwendet werden und wird auf "ZoomToggle" unbenannt. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=KeyboardEvent.key-Werte, die mit "Dead" beginnen, sollte nicht mehr verwendet werden und werden in "Dead" alleine eingegliedert. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importieren von XUL-Knoten in ein Inhaltsdokument sollte nicht mehr verwendet werden. Diese Funktionalität könnte bald entfernt werden.
 XMLDocumentLoadPrincipalMismatch=Die Verwendung von document.load ist auf Dokumenten verboten, die von anderen Fenstern kommen. Nur das Fenster, das ein Dokument erstellt hat, darf .load auf diesem Dokument aufrufen. Vorzugsweise sollten sie XMLHttpRequest stattdessen verwenden.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Eine IndexedDB-Transaktion, die noch nicht komplett war, wurde wegen Seitennavigation abgebrochen.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Der Speicherverbrauch für will-change ist zu hoch. Die Fläche deckt %1$S Pixel ab, das Budget ist die Dokumentfläche mit %2$S multipliziert (%3$S Pixel). Alle Vorkommen von will-change im Dokument werden ignoriert, wenn die Summe über dem Budget ist.
