update suite L10n to trunk state

--- a/de/suite/chrome/common/notification.properties
+++ b/de/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=Im 32-Bit-Modus neu starten
 carbonfailurepluginsMessage.button.accesskey=B
 
 missingpluginsMessage.title=Um alle Medieninhalte auf dieser Seite darzustellen, werden zusätzliche Plugins benötigt.
+missingpluginsMessage.button.label=Einstellungen
+missingpluginsMessage.button.accesskey=E
 
 blockedpluginsMessage.title=Manche von dieser Seite benötigten Plugins wurden zu Ihrer Sicherheit blockiert.
 blockedpluginsMessage.infoButton.label=Details…
