--- a/de/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/de/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -250,6 +250,9 @@ copyMessageStart=Nachricht wird in den %S-Ordner kopiert…
 copyMessageComplete=Kopie komplett.
 copyMessageFailed=Kopieren fehlgeschlagen.
 
+filterMessageComplete=Filter fertig.
+filterMessageFailed=Filter fehgeschlagen.
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
 largeMessageSendWarning=Warnung! Sie versuchen, eine Nachricht mit einer Größe von %S zu senden, welche die erlaubten Grenzen für diesen Mailserver überschreiten könnte. Soll das wirklich gemacht werden?
@@ -300,3 +303,5 @@ smtpEnterPasswordPromptTitle=SMTP-Server-Passwort benötigt
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=Fehler beim Kopieren der Nachricht nach %S. Erneut versuchen?\u0020
+
+errorFilteringMsg=Ihre Nachricht wurde gesendet und gespeichert, aber es gab einen Fehler beim Ausführen von Nachrichtenfiltern auf sie.
