[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/devtools/webconsole.properties
+++ b/es-MX/browser/chrome/browser/devtools/webconsole.properties
@@ -77,7 +77,7 @@ webConsoleMixedContentWarning=Mixed Content
 
 # LOCALIZATION NOTE (webConsoleMoreInfoLabel): the more info tag displayed
 # after security related web console messages.
-webConsoleMoreInfoLabel=Learn More
+webConsoleMoreInfoLabel=Saber más
 
 # LOCALIZATION NOTE (scratchpad.linkText): the text used in the right hand
 # side of the Web Console command line when JavaScript is being entered, to
