--- a/de/dom/chrome/security/security.properties
+++ b/de/dom/chrome/security/security.properties
@@ -11,7 +11,7 @@ InvalidSTSHeaders=Diese Website hat eine ungültige Strict-Transport-Security-Ko
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Die Website hat eine ungültige Public-Key-Pins-Kopfzeile angegeben.
 # LOCALIZATION NOTE: Do not translate "SHA-1"
-SHA1Sig=Diese Website verwendet ein SHA-1-Zertifikat; er wird empfohlen, Zertifikate mit Signaturalgorithmen zu verwenden, die strärkere Hashfunktionen verwenden als SHA-1.
+SHA1Sig=Diese Website verwendet ein SHA-1-Zertifikat; es wird empfohlen, Zertifikate mit Signaturalgorithmen zu verwenden, die stärkere Hashfunktionen verwenden als SHA-1.
 InsecurePasswordsPresentOnPage=Passwort-Felder sind auf einer unsicheren (http://) Seite vorhanden. Dies ist ein Sicherheitsrisiko, durch das Zugangsdaten gestohlen werden können.
 InsecureFormActionPasswordsPresent=Passwort-Felder sind in einem Formular mit einer unsicheren (http://) Formular-Aktion vorhanden. Dies ist ein Sicherheitsrisiko, durch das Zugangsdaten gestohlen werden können.
 InsecurePasswordsPresentOnIframe=Passwort-Felder sind in einem unsicheren (http://) Iframe vorhanden. Dies ist ein Sicherheitsrisiko, durch das Zugangsdaten gestohlen werden können.
